the ":" after name in hebrew

--- a/app/src/main/res/layout/players.xml
+++ b/app/src/main/res/layout/players.xml
@@ -13,6 +13,8 @@
         android:text="NameP : "
         android:textSize="20sp"
 
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
