--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/simple_card">
 
     <ImageView
         android:id="@+id/imageCard"
@@ -23,8 +23,7 @@
         app:layout_constraintBottom_toTopOf="@+id/imageCard"
         app:layout_constraintEnd_toEndOf="@+id/imageCard"
         app:layout_constraintStart_toStartOf="@+id/imageCard"
-        tools:text="10"/>
-
+        tools:text="10" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
