--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="select_card">#770A54C3</color>
+    <color name="simple_card">#DEEE00</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
