--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,15 +70,6 @@
         android:background="@color/teal_200"
         />
 
-    <TextView
-        android:id="@+id/forErrors"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/mainCard" />
-
     <Button
         android:id="@+id/boxOffice"
         android:layout_width="wrap_content"
@@ -87,6 +78,17 @@
         app:layout_constraintBottom_toTopOf="@+id/mainCard"
         app:layout_constraintEnd_toEndOf="@+id/mainCard"
         app:layout_constraintStart_toStartOf="@+id/mainCard"
-        app:layout_constraintTop_toBottomOf="@+id/userNameTV" />
+        app:layout_constraintTop_toBottomOf="@+id/userNameTV"
+        />
+    
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
